sna/gen9: Emit a dummy primitive between VertexElements

References: https://bugs.freedesktop.org/show_bug.cgi?id=98999
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>